优化登录功能,新增excel支持

--- a/zabbixTools.conf
+++ b/zabbixTools.conf
@@ -1,4 +1,4 @@
 [zabbix]
-user = 
-passwd = 
-api = http://xx/zabbix/api_jsonrpc.php
+user = Admin
+passwd = zabbix
+api = http://10.1.1.1/api_jsonrpc.php
